--- a/Django/inventory_management/inventory/templates/inventory/index.html
+++ b/Django/inventory_management/inventory/templates/inventory/index.html
@@ -29,6 +29,6 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 Inventory Management System</p>
+        <p>&copy; 2024 Inventory Management System - <a href="https://github.com/ElvisMw" target="_blank">MoreProjects</a></p>
     </footer>
 {% endblock %}
